Rename tutorial scripts

--- a/script/tutorial/1_main_climada.ipynb
+++ b/script/tutorial/1_main_climada.ipynb
@@ -89,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Information and exercises about impact functions, numpy and matplotlib in [Hands-on_II](Hands-on_II.ipynb#climada-I:-Impact-Functions-(using-numpy and-matplotlib).\n",
+    "Information and exercises about impact functions, numpy and matplotlib in [Impact Functions](2_impfuncs_np_mpl.ipynb#climada-I:-Impact-Functions-(using-numpy and-matplotlib).\n",
     "\n",
     "The `measures` attribute is of type `MeasureSet`. This class is a container of `Measure` instances, the same as `ImpactFuncSet` containing several `ImpactFunc`. This class is not used for impact calculations, but for building adaptation strategies:"
    ]
@@ -145,9 +145,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The detailed description and exercises on the `Exposures` class can be found in [Hands-on_III - Exposures](Hands-on_III.ipynb#Exposures-class). There is a brief explanation of the libraries pandas and cartopy as well.\n",
+    "The detailed description and exercises on the `Exposures` class can be found in [Exposures](3_exp_centr_pd_crt.ipynb#Exposures-class). There is a brief explanation of the libraries pandas and cartopy as well.\n",
     "\n",
-    "Furthermore, any country or region can be modelled using the black marble methodology of the `BlackMarble` class. This is explained in [Hands-on_V](Hands-on_V.ipynb)."
+    "Furthermore, any country or region can be modelled using the black marble methodology of the `BlackMarble` class. This is explained in [Black Marble](5_blackmarble.ipynb)."
    ]
   },
   {
@@ -181,7 +181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "See [Hands-on_III - Centroids](Hands-on_III.ipynb#Centroids-class)."
+    "See [Centroids](3_exp_centr_pd_crt.ipynb#Centroids-class)."
    ]
   },
   {
@@ -325,7 +325,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To see how the `TropCyclone` class works, see [Hands-on_IV](Hands-on_IV.ipynb#climada-III:-Hazard-and-TropicCyclone-(using-xarray-and-pint), where the `Hazard` class and `trop_cyclone` module are explained, as well as the xarray and pint libraries."
+    "To see how the `TropCyclone` class works, see [Hazard and TC](4_hzd_tc_xr_pint.ipynb#climada-III:-Hazard-and-TropicCyclone-(using-xarray-and-pint), where the `Hazard` class and `trop_cyclone` module are explained, as well as the xarray and pint libraries."
    ]
   },
   {
@@ -495,7 +495,7 @@
     "# 1. Entity: we only need impact functions and exposures to compute the impact\n",
     "# Exposures\n",
     "exp_ws_eu = Exposures()\n",
-    "# as seen in Hands-on_III, the variable names in the file can be changed\n",
+    "# as seen in 3_exp_centr_pd_crt.ipynb, the variable names in the file can be changed\n",
     "var_names = exp_ws_eu.get_def_file_var_names('.xls')\n",
     "var_names['col_name']['imp'] = 'VulnCurveID'\n",
     "exp_ws_eu.read(FILE_ENTITY, 'EU entity for winter storms.', var_names=var_names)\n",
