--- a/script/tutorial/2_impfuncs_np_mpl.ipynb
+++ b/script/tutorial/2_impfuncs_np_mpl.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# climada I: Impact Functions (using numpy and matplotlib)\n",
+    "# Impact Functions (using numpy and matplotlib)\n",
     "\n",
     "Prepared by G. Aznar Siguan"
    ]
