--- a/script/tutorial/3_exp_centr_pd_crt.ipynb
+++ b/script/tutorial/3_exp_centr_pd_crt.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# climada II: Exposures and Centroids (using pandas and cartopy)\n",
+    "# Exposures and Centroids (using pandas and cartopy)\n",
     "\n",
     "Prepared by G. Aznar Siguan"
    ]
