--- a/script/tutorial/4_hzd_tc_xr_pint.ipynb
+++ b/script/tutorial/4_hzd_tc_xr_pint.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# climada III: Hazard and TropCyclone (using xarray and pint)\n",
+    "# Hazard and TropCyclone (using xarray and pint)\n",
     "\n",
     "Prepared by G. Aznar Siguan"
    ]
@@ -238,7 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Xarray's `Dataset` is multi-dimensional equivalent of a pandas `DataFrame` (see previous [DataFrame](Hands-on_III.ipynb#On-pandas)'s short description). Here both the data and coordinates are dict-like containers of `DataArray`.\n",
+    "Xarray's `Dataset` is multi-dimensional equivalent of a pandas `DataFrame` (see previous [DataFrame](3_exp_centr_pd_crt.ipynb#On-pandas)'s short description). Here both the data and coordinates are dict-like containers of `DataArray`.\n",
     "\n",
     "Example:"
    ]
@@ -509,7 +509,7 @@
    "source": [
     "The `TropCyclone` class is a derived class of `Hazard`. As such, it contains all the attributes and methods of a `Hazard`. Additionally, it contains the method `set_from_track()` to model tropical cyclones from tracks of events contrined in a `TCTracks` instance. \n",
     "\n",
-    "When setting a tropical cyclone from a track, the centroids can be provided. If no centroids are provided, the global centroids `GLB_NatID_grid_0360as_adv_2.mat` are used (as explained in [Centroids class](Hands-on_III.ipynb#Centroids-class)). The method used to calculate the wind gusts (the hazard intensity) can also be configured. The default (and only implemented up to now) is the method of Holland 2008."
+    "When setting a tropical cyclone from a track, the centroids can be provided. If no centroids are provided, the global centroids `GLB_NatID_grid_0360as_adv_2.mat` are used (as explained in [Centroids class](3_exp_centr_pd_crt.ipynb#Centroids-class)). The method used to calculate the wind gusts (the hazard intensity) can also be configured. The default (and only implemented up to now) is the method of Holland 2008."
    ]
   },
   {
