--- a/script/tutorial/5_blackmarble.ipynb
+++ b/script/tutorial/5_blackmarble.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# climada IV: Exposures' BlackMarble\n",
+    "# Exposures' BlackMarble\n",
     "\n",
     "Prepared by G. Aznar Siguan"
    ]
@@ -25,7 +25,7 @@
     "\n",
     "Regarding the GDP and income group values, they are obtained from the [World Bank](https://data.worldbank.org) using the [pandas-datareader](https://pandas-datareader.readthedocs.io/en/latest/remote_data.html) API. If a value is missing, the value of the closest year is considered. When no values are provided from the World Bank, we use the [Natural Earth](https://www.naturalearthdata.com) repository values.\n",
     "\n",
-    "The `BlackMarble` class inherits from the [Exposures](Hands-on_III.ipynb#Exposures-class) class. It provides a `set_countries()` method which enables to model a country using different settings. The first time a night light image is used, it is downloaded and stored locally. This might take some time."
+    "The `BlackMarble` class inherits from the [Exposures](3_exp_centr_pd_crt.ipynb#Exposures-class) class. It provides a `set_countries()` method which enables to model a country using different settings. The first time a night light image is used, it is downloaded and stored locally. This might take some time."
    ]
   },
   {
