add note on MAX_SIZE variable in impact module

--- a/script/tutorial/1_main_climada.ipynb
+++ b/script/tutorial/1_main_climada.ipynb
@@ -345,6 +345,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `impact` module containes a variable `MAX_SIZE`. This controls the maximum matrix size contained in a chunk. You can decrease its value if you are having memory issues when using the `Impact`'s `calc` method. A high value will make the computation fast, but increase the memory use."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
