--- a/script/tutorial/1_main_climada.ipynb
+++ b/script/tutorial/1_main_climada.ipynb
@@ -18,6 +18,8 @@
     "  * Exposures: exposed values\n",
     "    * BlackMarble: regional economic model from nightlight intensities and economic indicators (GDP, income group)\n",
     "  * ImpactFuncSet: collection of impact functions per hazard\n",
+    "    * ImpactFunc: one impact function\n",
+    "    * IFEmanuelUSA: one impact function by K. Emanuel for tropical cyclones in USA.\n",
     "  * DiscRates: discount rates per year\n",
     "  * MeasureSet: collection of measures for adaptation\n",
     "* Hazard: meteorological models\n",
