update according to changes in head import and rename of num_funcs to size method.

--- a/script/tutorial/2_impfuncs_np_mpl.ipynb
+++ b/script/tutorial/2_impfuncs_np_mpl.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from climada import ImpactFunc\n",
+    "from climada.entity import ImpactFunc\n",
     "# Some degub information will appear the first time"
    ]
   },
@@ -522,7 +522,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "% matplotlib inline"
+    "%matplotlib inline"
    ]
   },
   {
@@ -547,6 +547,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "x = np.arange(0, 12, 0.1) # abscisse\n",
@@ -760,7 +761,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from climada import ImpactFuncSet, ENT_TEMPLATE_XLS"
+    "from climada.entity import ImpactFuncSet\n",
+    "from climada.util import ENT_TEMPLATE_XLS"
    ]
   },
   {
@@ -811,7 +813,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Too see how many impact functions there are, use the `num_funcs()` method. You might use `help(imp_fun_set.num_funcs)` to see the description of the method inputs."
+    "Too see how many impact functions there are, use the `size()` method. You might use `help(imp_fun_set.size)` to see the description of the method inputs."
    ]
   },
   {
@@ -820,9 +822,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Total number of impact functions:', imp_fun_set.num_funcs())\n",
-    "print('Number of impact functions with Id=1:', imp_fun_set.num_funcs(fun_id=1))\n",
-    "print('Number of impact functions for tropical cyclones:', imp_fun_set.num_funcs(haz_type='TC'))"
+    "print('Total number of impact functions:', imp_fun_set.size())\n",
+    "print('Number of impact functions with Id=1:', imp_fun_set.size(fun_id=1))\n",
+    "print('Number of impact functions for tropical cyclones:', imp_fun_set.size(haz_type='TC'))"
    ]
   },
   {
@@ -882,9 +884,9 @@
     "\n",
     "# Remove and add\n",
     "imp_fun_set.remove_func(fun_id=3, haz_type='TC')\n",
-    "print('Total number of impact functions after removal:', imp_fun_set.num_funcs())\n",
+    "print('Total number of impact functions after removal:', imp_fun_set.size())\n",
     "imp_fun_set.add_func(imp_fun)\n",
-    "print('Total number of impact functions after addition:', imp_fun_set.num_funcs())\n"
+    "print('Total number of impact functions after addition:', imp_fun_set.size())\n"
    ]
   },
   {
