update according to changes in head import.

--- a/script/tutorial/3_exp_centr_pd_crt.ipynb
+++ b/script/tutorial/3_exp_centr_pd_crt.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from climada import Exposures\n",
+    "from climada.entity import Exposures\n",
     "\n",
     "help(Exposures)"
    ]
@@ -67,7 +67,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from climada import SOURCE_DIR\n",
+    "from climada.util import SOURCE_DIR\n",
     "ENT_TEST_XLS = os.path.join(SOURCE_DIR, 'entity/test/data', 'demo_today.xlsx')\n",
     "print(ENT_TEST_XLS)"
    ]
@@ -217,7 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "% matplotlib inline\n",
+    "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "dfr[['Value']].plot.hist(bins = 3)\n",
     "plt.xlabel('Value')\n",
@@ -249,7 +249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "% matplotlib inline\n",
+    "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "import cartopy.crs as ccrs\n",
     "\n",
@@ -381,7 +381,7 @@
    },
    "outputs": [],
    "source": [
-    "% matplotlib inline\n",
+    "%matplotlib inline\n",
     "import numpy as np\n",
     "\n",
     "# 1. value variable is an numpy array\n",
@@ -430,7 +430,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from climada import DATA_DIR # folder containing all the test and demo data\n",
+    "from climada.util import DATA_DIR # folder containing all the test and demo data\n",
     "WS_EXP = DATA_DIR + '/demo/WS_Europe.xls'\n",
     "\n",
     "try:\n",
@@ -517,7 +517,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from climada import ENT_DEMO_MAT\n",
+    "from climada.util import ENT_DEMO_MAT\n",
     "file_names = [ENT_DEMO_MAT, ENT_TEST_XLS]\n",
     "exp_all = Exposures(file_names)"
    ]
@@ -554,8 +554,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "% matplotlib inline\n",
-    "from climada import Centroids\n",
+    "%matplotlib inline\n",
+    "from climada.hazard import Centroids\n",
     "\n",
     "Centroids.get_sup_file_format()"
    ]
@@ -590,7 +590,7 @@
    "outputs": [],
    "source": [
     "# Solution:\n",
-    "from climada import GLB_CENTROIDS_MAT\n",
+    "from climada.util import GLB_CENTROIDS_MAT\n",
     "\n",
     "glb_cent = Centroids(GLB_CENTROIDS_MAT)\n",
     "\n",
@@ -669,7 +669,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from climada import HAZ_DEMO_MAT, SOURCE_DIR\n",
+    "from climada.util import HAZ_DEMO_MAT, SOURCE_DIR\n",
     "BRB_CENT = os.path.join(SOURCE_DIR, 'hazard/centroids/test/data', 'centr_brb_test.mat')\n",
     "\n",
     "# Put your code here\n",
@@ -685,7 +685,7 @@
    "outputs": [],
    "source": [
     "# SOLUTION:\n",
-    "from climada import HAZ_DEMO_MAT, SOURCE_DIR\n",
+    "from climada.util import HAZ_DEMO_MAT, SOURCE_DIR\n",
     "BRB_CENT = os.path.join(SOURCE_DIR, 'hazard/centroids/test/data', 'centr_brb_test.mat')\n",
     "\n",
     "# Option 1: Read individually and append\n",
