update according to changes in head import.

--- a/script/tutorial/4_hzd_tc_xr_pint.ipynb
+++ b/script/tutorial/4_hzd_tc_xr_pint.ipynb
@@ -39,8 +39,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "% matplotlib inline\n",
-    "from climada import Hazard, HAZ_DEMO_MAT\n",
+    "%matplotlib inline\n",
+    "from climada.hazard import Hazard\n",
+    "from climada.util import HAZ_DEMO_MAT\n",
     "# Unlike in other climada classes, Hazard needs to know the acronym of the hazard type in first place!!!\n",
     "haz_tc_fl = Hazard('TC', HAZ_DEMO_MAT, 'Historic and synthetic tropical cyclones in Florida from 1851 to 2011.')\n",
     "print()\n",
@@ -185,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from climada import TCTracks\n",
+    "from climada.hazard import TCTracks\n",
     "help(TCTracks)"
    ]
   },
@@ -325,7 +326,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from climada import SOURCE_DIR\n",
+    "from climada.util import SOURCE_DIR\n",
     "import os\n",
     "BRB_TRACK = os.path.join(SOURCE_DIR, 'hazard/test/data', 'trac_brb_test.csv')\n",
     "\n",
@@ -341,7 +342,7 @@
    "outputs": [],
    "source": [
     "# SOLUTION:\n",
-    "from climada import SOURCE_DIR\n",
+    "from climada.util import SOURCE_DIR\n",
     "import os\n",
     "# 1.Read \"trac_brb_test.csv\" file containing a tropical cyclone track in Barbados.\n",
     "BRB_TRACK = os.path.join(SOURCE_DIR, 'hazard/test/data', 'trac_brb_test.csv')\n",
@@ -518,7 +519,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from climada import TropCyclone\n",
+    "from climada.hazard import TropCyclone\n",
     "help(TropCyclone)"
    ]
   },
@@ -593,7 +594,7 @@
    "outputs": [],
    "source": [
     "# SOLUTION:\n",
-    "from climada import HAZ_DEMO_MAT\n",
+    "from climada.util import HAZ_DEMO_MAT\n",
     "tc_haz = TropCyclone()\n",
     "tc_haz.read(HAZ_DEMO_MAT)\n",
     "print('Number of historical events:', tc_haz.orig.nonzero()[0].size)"
