update according to changes in head import.

--- a/script/tutorial/5_blackmarble.ipynb
+++ b/script/tutorial/5_blackmarble.ipynb
@@ -41,8 +41,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "% matplotlib inline\n",
-    "from climada import BlackMarble\n",
+    "%matplotlib inline\n",
+    "from climada.entity import BlackMarble\n",
     "\n",
     "irn_tur = BlackMarble()\n",
     "irn_tur.set_countries(['Iran', 'Turkey'], 1992, res_km=1.0)\n",
