update according to code changes: impact_id of exposures specifies hazard type.

--- a/script/tutorial/1_main_climada.ipynb
+++ b/script/tutorial/1_main_climada.ipynb
@@ -141,7 +141,7 @@
     "\n",
     "ent_fl.exposures = Exposures(ENT_FL_MAT)\n",
     "ent_fl.exposures.value_unit = 'USD'      # fill missing ('NA') value unit\n",
-    "ent_fl.exposures.impact_id['TC'] = ent_fl.exposures.impact_id.pop('NA') # set impact functions of TC\n",
+    "ent_fl.exposures.impact_id['TC'] = ent_fl.exposures.impact_id.pop('') # set impact functions of TC\n",
     "ent_fl.exposures.plot();"
    ]
   },
@@ -507,6 +507,9 @@
     "from climada.entity import Exposures, ImpactFuncSet\n",
     "from climada.engine import Impact\n",
     "\n",
+    "# Define hazard type\n",
+    "HAZ_TYPE = 'WS'\n",
+    "\n",
     "# 1. Entity: we only need impact functions and exposures to compute the impact\n",
     "# Exposures\n",
     "exp_ws_eu = Exposures()\n",
@@ -514,6 +517,7 @@
     "var_names = exp_ws_eu.get_def_file_var_names('.xls')\n",
     "var_names['col_name']['imp'] = 'VulnCurveID'\n",
     "exp_ws_eu.read(FILE_ENTITY, 'EU entity for winter storms.', var_names=var_names)\n",
+    "exp_ws_eu.impact_id[HAZ_TYPE] = exp_ws_eu.impact_id.pop('') # set impact functions type\n",
     "\n",
     "# Impact functions\n",
     "impf_ws_eu = ImpactFuncSet()\n",
@@ -522,7 +526,7 @@
     "impf_ws_eu.read(FILE_ENTITY, 'Impact functions for winter storms in EU.', var_names=var_names)\n",
     "\n",
     "# 2. Hazard\n",
-    "haz_ws_eu = Hazard('WS', FILE_HAZARD, 'WS EU ERA 40')\n",
+    "haz_ws_eu = Hazard(HAZ_TYPE, FILE_HAZARD, 'WS EU ERA 40')\n",
     "\n",
     "# 3. Impact\n",
     "imp_ws_eu = Impact()\n",
