update according to code changes: impact_id of exposures specifies hazard type.

--- a/script/tutorial/3_exp_centr_pd_crt.ipynb
+++ b/script/tutorial/3_exp_centr_pd_crt.ipynb
@@ -30,7 +30,7 @@
     " * id (np.array): an id for each exposure\n",
     " * coord (np.array or Coordinates): 2d array with lat in first column and lon in second, or Coordinates instance. \"lat\" and \"lon\" are descriptors of the latitude and longitude respectively.\n",
     " * value (np.array): a value for each exposure\n",
-    " * impact_id (np.array): impact function id corresponding to each exposure\n",
+    " * impact_id (dict): for each hazard type (key in dict), np.array of impact function id corresponding to each exposure\n",
     " * deductible (np.array, default): deductible value for each exposure\n",
     " * cover (np.array, default): cover value for each exposure\n",
     " * category_id (np.array, optional): category id for each exposure (when defined)\n",
