change plot settings.

--- a/script/tutorial/3_exp_centr_pd_crt.ipynb
+++ b/script/tutorial/3_exp_centr_pd_crt.ipynb
@@ -393,10 +393,10 @@
     "print('Coordinates maximum value: (lat, lon) = (', exp.lat[np.argmin(exp.value)],',', exp.lon[np.argmin(exp.value)], ')')\n",
     "\n",
     "# 3.\n",
-    "exp.plot() # Default configuration\n",
+    "exp.plot(buffer_deg=1.0) # Default configuration\n",
     "\n",
     "# 4.\n",
-    "exp.plot(gridsize=10, cmap='rainbow')  # Decrease number of bins and change colormap"
+    "exp.plot(gridsize=10, cmap='rainbow', buffer_deg=1.0)  # Decrease number of bins and change colormap"
    ]
   },
   {
