--- a/script/tutorial/climada_entity_Exposures.ipynb
+++ b/script/tutorial/climada_entity_Exposures.ipynb
@@ -22,9 +22,9 @@
     " * cover (pd.Series, optional): cover value for each exposure. Used for insurance\n",
     " * category_id (pd.Series, optional): category id (e.g. building code) for each exposure\n",
     " * region_id (pd.Series, optional): region id (e.g. country ISO code) for each exposure\n",
-    " * centr_* (pd.Series, optional): e.g. centr_TC. centroids index for hazard TC. There might be different hazards defined: centr_TC, centr_FL, ... Computed in method `assign()`\n",
+    " * centr_* (pd.Series, optional): e.g. centr_TC. centroids index for hazard TC. There might be different hazards defined: centr_TC, centr_FL, ... Computed in method `assign_centroids()`\n",
     "\n",
-    "Some of the variables are *optional*. This means that the package `climada.engine` also works without these variables. For instance, the `region_id` and `category_id` values only provide additional information, whilst the `centr_*` variable can be computed if not provided using the method `assign()`. The attibute `geometry` is only needed to execute the methods of `geopandas` and can be set using the method `set_geometry_points()`.\n",
+    "Some of the variables are *optional*. This means that the package `climada.engine` also works without these variables. For instance, the `region_id` and `category_id` values only provide additional information, whilst the `centr_*` variable can be computed if not provided using the method `assign_centroids()`. The attibute `geometry` is only needed to execute the methods of `geopandas` and can be set using the method `set_geometry_points()`.\n",
     "\n",
     "After defining an `Exposures` instance use always the `check()` method to see which attributes are missing. This method will raise an Error if `value`, `longitude`, `latitude` or `if_*` are not set."
    ]
