unify readers and writers of entity classes. update tutorial scripts

--- a/script/tutorial/climada_entity_BlackMarble.ipynb
+++ b/script/tutorial/climada_entity_BlackMarble.ipynb
@@ -6,17 +6,17 @@
    "source": [
     "# BlackMarble class\n",
     "\n",
-    "This class models a country or region interpolating the GDP and income group values through the night light intensities for a specific year.\n",
+    "This class is used to approximate the economic exposure. It models countries and provinces interpolating the GDP and income group values through the night light intensities for a specific year.\n",
     "\n",
     "The night light images used are the following:\n",
     "- year 2012 and 2016: https://earthobservatory.nasa.gov/Features/NightLights (15 arcsec resolution (~500m))\n",
     "- from 1992 until 2013: https://ngdc.noaa.gov/eog/dmsp/downloadV4composites.html (30 arcsec resolution (~1km), stable lights)\n",
     "\n",
-    "By default, for years higher than 2013 the NASA images are used, whilst for 2013 and earlier years the NOAA ones are considered. However, there is a flag which allows to choose the closest NASA or NOAA images.\n",
+    "By default, for years higher than 2013 the NASA images are used, whilst for 2013 and earlier years the NOAA ones are considered. However, there is a flag which allows to choose the closest NASA or NOAA images. The default resolution is that of the image, but any resolution can be set and will be computed by interpolation.\n",
     "\n",
     "Regarding the GDP (nominal GDP at current USD) and income group values, they are obtained from the [World Bank](https://data.worldbank.org) using the [pandas-datareader](https://pandas-datareader.readthedocs.io/en/latest/remote_data.html) API. If a value is missing, the value of the closest year is considered. When no values are provided from the World Bank, we use the [Natural Earth](https://www.naturalearthdata.com) repository values.\n",
     "\n",
-    "The `BlackMarble` class inherits from the [Exposures](3_exp_centr_pd_crt.ipynb#Exposures-class) class. It provides a `set_countries()` method which enables to model a country using different settings. The first time a night light image is used, it is downloaded and stored locally. This might take some time."
+    "The `BlackMarble` class inherits from the [Exposures](climada_entity_Exposures.ipynb#Exposures-class) class. It provides a `set_countries()` method which enables to model a country using different settings. The first time a night light image is used, it is downloaded and stored locally. This might take some time."
    ]
   },
   {
