--- a/script/tutorial/climada_entity_Exposures.ipynb
+++ b/script/tutorial/climada_entity_Exposures.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# Exposures class\n",
     "\n",
-    "Exposures is a [GeoDataFrame](https://geopandas.readthedocs.io/en/latest/data_structures.html#geodataframe) of Python's library [geopandas](https://geopandas.readthedocs.io/en/latest/gallery/cartopy_convert.html).\n",
+    "Exposure can describe the geographical distribution of people, livelihoods and assets or infrastructure; all items potentially exposed to hazards. It is represented in the class `Exposures`, which is a [GeoDataFrame](https://geopandas.readthedocs.io/en/latest/data_structures.html#geodataframe) of Python's library [geopandas](https://geopandas.readthedocs.io/en/latest/gallery/cartopy_convert.html).\n",
     "\n",
-    "The columns and metada contained are:\n",
+    "The variables (columns) and metada contained are:\n",
     "\n",
     " * tag (Tag): metada - information about the source data\n",
     " * ref_year (int): metada - reference year\n",
@@ -45,7 +45,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-01-23 08:58:29,683 - climada - DEBUG - Loading default config file: /Users/aznarsig/Documents/Python/climada_python/climada/conf/defaults.conf\n"
+      "2019-01-29 09:10:50,643 - climada - DEBUG - Loading default config file: /Users/aznarsig/Documents/Python/climada_python/climada/conf/defaults.conf\n"
      ]
     },
     {
@@ -70,18 +70,18 @@
       "4      4      15.0  20.808081      1\n",
       "\n",
       "\u001b[1;03;30;30mexp_df is now an Exposures: <class 'climada.entity.exposures.base.Exposures'>\u001b[0m\n",
-      "2019-01-23 08:58:30,788 - climada.entity.exposures.base - INFO - Setting geometry attribute.\n",
+      "2019-01-29 09:10:51,987 - climada.entity.exposures.base - INFO - Setting geometry attribute.\n",
       "\n",
       "\u001b[1;03;30;30mcheck method logs:\u001b[0m\n",
-      "2019-01-23 08:58:30,860 - climada.entity.exposures.base - INFO - tag metadata set to default value:  File: \n",
+      "2019-01-29 09:10:52,093 - climada.entity.exposures.base - INFO - tag metadata set to default value:  File: \n",
       " Description: \n",
-      "2019-01-23 08:58:30,861 - climada.entity.exposures.base - INFO - ref_year metadata set to default value: 2018\n",
-      "2019-01-23 08:58:30,862 - climada.entity.exposures.base - INFO - value_unit metadata set to default value: USD\n",
-      "2019-01-23 08:58:30,862 - climada.entity.exposures.base - INFO - centr_ not set.\n",
-      "2019-01-23 08:58:30,864 - climada.entity.exposures.base - INFO - deductible not set.\n",
-      "2019-01-23 08:58:30,865 - climada.entity.exposures.base - INFO - cover not set.\n",
-      "2019-01-23 08:58:30,865 - climada.entity.exposures.base - INFO - category_id not set.\n",
-      "2019-01-23 08:58:30,866 - climada.entity.exposures.base - INFO - region_id not set.\n",
+      "2019-01-29 09:10:52,094 - climada.entity.exposures.base - INFO - ref_year metadata set to default value: 2018\n",
+      "2019-01-29 09:10:52,095 - climada.entity.exposures.base - INFO - value_unit metadata set to default value: USD\n",
+      "2019-01-29 09:10:52,096 - climada.entity.exposures.base - INFO - centr_ not set.\n",
+      "2019-01-29 09:10:52,097 - climada.entity.exposures.base - INFO - deductible not set.\n",
+      "2019-01-29 09:10:52,099 - climada.entity.exposures.base - INFO - cover not set.\n",
+      "2019-01-29 09:10:52,100 - climada.entity.exposures.base - INFO - category_id not set.\n",
+      "2019-01-29 09:10:52,102 - climada.entity.exposures.base - INFO - region_id not set.\n",
       "\n",
       "\u001b[1;03;30;30mexp_df looks like:\u001b[0m\n",
       "   value  latitude  longitude  if_TC                      geometry\n",
@@ -148,18 +148,18 @@
       "4       Palikir  POINT (158.1499743237623 6.916643696007725)\n",
       "\n",
       "\u001b[1;03;30;30mexp_gpd is now an Exposures: <class 'climada.entity.exposures.base.Exposures'>\u001b[0m\n",
-      "2019-01-23 08:58:30,915 - climada.entity.exposures.base - INFO - Setting latitude and longitude attributes.\n",
+      "2019-01-29 09:10:52,188 - climada.entity.exposures.base - INFO - Setting latitude and longitude attributes.\n",
       "\n",
       "\u001b[1;03;30;30mcheck method logs:\u001b[0m\n",
-      "2019-01-23 08:58:30,924 - climada.entity.exposures.base - INFO - tag metadata set to default value:  File: \n",
+      "2019-01-29 09:10:52,204 - climada.entity.exposures.base - INFO - tag metadata set to default value:  File: \n",
       " Description: \n",
-      "2019-01-23 08:58:30,925 - climada.entity.exposures.base - INFO - ref_year metadata set to default value: 2018\n",
-      "2019-01-23 08:58:30,925 - climada.entity.exposures.base - INFO - value_unit metadata set to default value: USD\n",
-      "2019-01-23 08:58:30,926 - climada.entity.exposures.base - INFO - centr_ not set.\n",
-      "2019-01-23 08:58:30,927 - climada.entity.exposures.base - INFO - deductible not set.\n",
-      "2019-01-23 08:58:30,927 - climada.entity.exposures.base - INFO - cover not set.\n",
-      "2019-01-23 08:58:30,928 - climada.entity.exposures.base - INFO - category_id not set.\n",
-      "2019-01-23 08:58:30,929 - climada.entity.exposures.base - INFO - region_id not set.\n",
+      "2019-01-29 09:10:52,205 - climada.entity.exposures.base - INFO - ref_year metadata set to default value: 2018\n",
+      "2019-01-29 09:10:52,207 - climada.entity.exposures.base - INFO - value_unit metadata set to default value: USD\n",
+      "2019-01-29 09:10:52,209 - climada.entity.exposures.base - INFO - centr_ not set.\n",
+      "2019-01-29 09:10:52,210 - climada.entity.exposures.base - INFO - deductible not set.\n",
+      "2019-01-29 09:10:52,211 - climada.entity.exposures.base - INFO - cover not set.\n",
+      "2019-01-29 09:10:52,213 - climada.entity.exposures.base - INFO - category_id not set.\n",
+      "2019-01-29 09:10:52,215 - climada.entity.exposures.base - INFO - region_id not set.\n",
       "\n",
       "\u001b[1;03;30;30mexp_gpd looks like:\u001b[0m\n",
       "           name                                     geometry  value  \\\n",
@@ -207,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define Exposures from an excel file"
+    "## Read Exposures of an excel file"
    ]
   },
   {
@@ -243,13 +243,13 @@
       "4            1      1         5      1         5  \n",
       "\n",
       "\u001b[1;03;30;30mexp_templ is now an Exposures: <class 'climada.entity.exposures.base.Exposures'>\u001b[0m\n",
-      "2019-01-23 08:58:31,003 - climada.entity.exposures.base - INFO - Setting geometry attribute.\n",
+      "2019-01-29 09:10:52,303 - climada.entity.exposures.base - INFO - Setting geometry attribute.\n",
       "\n",
       "\u001b[1;03;30;30mcheck method logs:\u001b[0m\n",
-      "2019-01-23 08:58:31,006 - climada.entity.exposures.base - INFO - tag metadata set to default value:  File: \n",
+      "2019-01-29 09:10:52,308 - climada.entity.exposures.base - INFO - tag metadata set to default value:  File: \n",
       " Description: \n",
-      "2019-01-23 08:58:31,006 - climada.entity.exposures.base - INFO - ref_year metadata set to default value: 2018\n",
-      "2019-01-23 08:58:31,007 - climada.entity.exposures.base - INFO - value_unit metadata set to default value: USD\n",
+      "2019-01-29 09:10:52,309 - climada.entity.exposures.base - INFO - ref_year metadata set to default value: 2018\n",
+      "2019-01-29 09:10:52,310 - climada.entity.exposures.base - INFO - value_unit metadata set to default value: USD\n",
       "\n",
       "\u001b[1;03;30;30mexp_templ looks like:\u001b[0m\n",
       "    latitude  longitude         value  deductible         cover  region_id  \\\n",
@@ -283,7 +283,7 @@
     "\n",
     "# Fill DataFrame from Excel file\n",
     "file_name = ENT_TEMPLATE_XLS # provide absolute path of the excel file\n",
-    "exp_templ = pd.read_excel(file_name) \n",
+    "exp_templ = pd.read_excel(file_name)\n",
     "\n",
     "print('\\x1b[1;03;30;30m' + 'exp_templ is a DataFrame:', str(type(exp_templ)) + '\\x1b[0m')\n",
     "print('\\x1b[1;03;30;30m' + 'exp_templ looks like:' + '\\x1b[0m')\n",
@@ -304,7 +304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define Exposures from any file type supported by GeoDataFrame and DataFrame"
+    "## Read Exposures of any file type supported by GeoDataFrame and DataFrame"
    ]
   },
   {
@@ -387,7 +387,7 @@
      "data": {
       "text/plain": [
        "(<Figure size 648x936 with 2 Axes>,\n",
-       " array([[<cartopy.mpl.geoaxes.GeoAxesSubplot object at 0x1a1e719128>]],\n",
+       " array([[<cartopy.mpl.geoaxes.GeoAxesSubplot object at 0x1151d9908>]],\n",
        "       dtype=object))"
       ]
      },
@@ -430,7 +430,7 @@
      "data": {
       "text/plain": [
        "(<Figure size 648x936 with 2 Axes>,\n",
-       " array([[<cartopy.mpl.geoaxes.GeoAxesSubplot object at 0x1a2be531d0>]],\n",
+       " array([[<cartopy.mpl.geoaxes.GeoAxesSubplot object at 0x1a24cc85f8>]],\n",
        "       dtype=object))"
       ]
      },
@@ -472,7 +472,7 @@
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x1a2d7dd2b0>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x1a24cad898>]],\n",
        "      dtype=object)"
       ]
      },
@@ -1878,8 +1878,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-01-23 08:58:46,448 - climada.entity.exposures.base - INFO - Adding sea at 5 km resolution and 10 km distance from coast.\n",
-      "2019-01-23 08:58:48,191 - climada.entity.exposures.base - INFO - Setting geometry attribute.\n",
+      "2019-01-29 09:11:10,949 - climada.entity.exposures.base - INFO - Adding sea at 5 km resolution and 10 km distance from coast.\n",
+      "2019-01-29 09:11:13,287 - climada.entity.exposures.base - INFO - Setting geometry attribute.\n",
       "\u001b[1;03;30;30mPlotting exp_templ_sea.\u001b[0m\n"
      ]
     },
@@ -1887,7 +1887,7 @@
      "data": {
       "text/plain": [
        "(<Figure size 648x936 with 2 Axes>,\n",
-       " array([[<cartopy.mpl.geoaxes.GeoAxesSubplot object at 0x1a2d563240>]],\n",
+       " array([[<cartopy.mpl.geoaxes.GeoAxesSubplot object at 0x1a24da3cf8>]],\n",
        "       dtype=object))"
       ]
      },
@@ -2370,7 +2370,7 @@
    "outputs": [],
    "source": [
     "# default: ESRI shape file in current path. metadata not saved!\n",
-    "exp_templ.to_file('exp_templ')"
+    "exp_templ.to_file('results/exp_templ')"
    ]
   },
   {
@@ -2387,7 +2387,7 @@
    "outputs": [],
    "source": [
     "# save to csv format. metadata not saved!\n",
-    "exp_templ.to_csv('exp_templ_csv', sep='\\t')"
+    "exp_templ.to_csv('results/exp_templ_csv', sep='\\t')"
    ]
   },
   {
@@ -2421,15 +2421,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-01-23 08:58:51,128 - climada.util.save - INFO - Created folder /Users/aznarsig/Documents/Python/climada_python/script/tutorial/results.\n",
-      "2019-01-23 08:58:51,131 - climada.util.save - INFO - Written file /Users/aznarsig/Documents/Python/climada_python/script/tutorial/results/exp_templ.pkl.p\n"
+      "2019-01-29 09:11:16,945 - climada.util.save - INFO - Written file /Users/aznarsig/Documents/Python/climada_python/script/tutorial/results/exp_templ.pkl.p\n"
      ]
     }
    ],
    "source": [
     "# save in pickle format\n",
     "from climada.util.save import save\n",
-    "\n",
+    "# this generates a results folder in the current path and stores the output there\n",
     "save('exp_templ.pkl.p', exp_templ) # creates results folder and stores there"
    ]
   }
