--- a/script/tutorial/climada_entity_DiscRates.ipynb
+++ b/script/tutorial/climada_entity_DiscRates.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# DiscRates class\n",
     "\n",
-    "This class containes the discount rates for every year and discounts given values. Its attributes are:\n",
+    "This class contains the discount rates for every year and discounts given values. Its attributes are:\n",
     "\n",
     " * tag (Tag): information about the source data\n",
     " * years (np.array): years\n",
@@ -22,7 +22,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-01-29 09:11:39,963 - climada - DEBUG - Loading default config file: /Users/aznarsig/Documents/Python/climada_python/climada/conf/defaults.conf\n"
+      "2019-01-30 20:15:26,873 - climada - DEBUG - Loading default config file: /Users/aznarsig/Documents/Python/climada_python/climada/conf/defaults.conf\n"
      ]
     },
     {
@@ -228,7 +228,7 @@
      "data": {
       "text/plain": [
        "(<Figure size 288x288 with 1 Axes>,\n",
-       " [<matplotlib.axes._subplots.AxesSubplot at 0x1a1d16dc88>])"
+       " [<matplotlib.axes._subplots.AxesSubplot at 0x1a204c94e0>])"
       ]
      },
      "execution_count": 3,
@@ -308,7 +308,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-01-29 09:11:42,078 - climada.util.save - INFO - Written file /Users/aznarsig/Documents/Python/climada_python/script/tutorial/results/tutorial_disc.p\n"
+      "2019-01-30 20:15:29,943 - climada.util.save - INFO - Written file /Users/aznarsig/Documents/Python/climada_python/script/tutorial/results/tutorial_disc.p\n"
      ]
     }
    ],
