--- a/script/tutorial/climada_entity_MeasureSet.ipynb
+++ b/script/tutorial/climada_entity_MeasureSet.ipynb
@@ -35,13 +35,15 @@
     " * risk_transf_attach (float): risk transfer attachment\n",
     " * risk_transf_cover (float): risk transfer cover\n",
     " \n",
-    "The method `check()` validates the attibutes and the method `apply()` applies a measures to the given exposure, impact functions and hazard. The last method is called from the `CostBenefit` class.\n",
+    "The method `check()` validates the attibutes and the method `apply()` applies the measure to given exposure, impact functions and hazard. The last method is called from the `CostBenefit` class.\n",
     " \n",
-    " Currently, only the impact of parameters `hazard_inten_imp`, `mdd_impact` and `paa_impact` is implemented (besides the description parameters). They transform the impact functions linearly: \n",
+    "Currently, only the impact of parameters `hazard_inten_imp`, `mdd_impact`, `paa_impact` and `hazard_freq_cutoff` are implemented (besides the description parameters). The first three transform the impact functions linearly as follows: \n",
     " \n",
     "     intensity = intensity*hazard_inten_imp[0] + hazard_inten_imp[1]\n",
     "     mdd = mdd*mdd_impact[0] + mdd_impact[1]\n",
-    "     paa = paa*paa_impact[0] + paa_impact[1]"
+    "     paa = paa*paa_impact[0] + paa_impact[1]\n",
+    "     \n",
+    "`hazard_freq_cutoff` modifies the hazard by putting 0 intensities to the events whose exceedance impact frequency are greater than `hazard_freq_cutoff`; it removes events with higher occurrence."
    ]
   },
   {
@@ -53,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-01-29 09:36:31,941 - climada - DEBUG - Loading default config file: /Users/aznarsig/Documents/Python/climada_python/climada/conf/defaults.conf\n"
+      "2019-01-30 20:14:57,876 - climada - DEBUG - Loading default config file: /Users/aznarsig/Documents/Python/climada_python/climada/conf/defaults.conf\n"
      ]
     },
     {
@@ -403,7 +405,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-01-29 09:36:34,075 - climada.util.save - INFO - Written file /Users/aznarsig/Documents/Python/climada_python/script/tutorial/results/tutorial_meas_set.p\n"
+      "2019-01-30 20:15:00,934 - climada.util.save - INFO - Written file /Users/aznarsig/Documents/Python/climada_python/script/tutorial/results/tutorial_meas_set.p\n"
      ]
     }
    ],
