--- a/script/tutorial/climada_hazard_TropCyclone.ipynb
+++ b/script/tutorial/climada_hazard_TropCyclone.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Hazard: Tropical cyclones\n",
     "\n",
-    "Tropical cyclones tracks are modelled in class `TCTracks` and then provided to the hazard `TropCyclone`."
+    "Tropical cyclones tracks are gathered in the class `TCTracks` and then provided to the hazard `TropCyclone` which computes the wind gusts at each centroid. `TropCyclone` inherits from `Hazard` and has an associated hazard type `TC`."
    ]
   },
   {
@@ -15,7 +15,7 @@
    "source": [
     "# TCTracks class\n",
     "\n",
-    "`TCTracks` reads and deals with tropical cyclone tracks of the [IBTrACS](https://www.ncdc.noaa.gov/ibtracs/) repository."
+    "`TCTracks` reads and handles historical tropical cyclone tracks of the [IBTrACS](https://www.ncdc.noaa.gov/ibtracs/) repository. It generates synthetic tracks from the historical ones using Wiener processes."
    ]
   },
   {
@@ -27,7 +27,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-01-23 08:51:17,916 - climada - DEBUG - Loading default config file: /Users/aznarsig/Documents/Python/climada_python/climada/conf/defaults.conf\n"
+      "2019-01-30 20:18:37,843 - climada - DEBUG - Loading default config file: /Users/aznarsig/Documents/Python/climada_python/climada/conf/defaults.conf\n"
      ]
     },
     {
@@ -201,7 +201,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-01-23 08:51:19,050 - climada.hazard.tc_tracks - INFO - Reading /Users/aznarsig/Documents/Python/climada_python/climada/hazard/test/data/trac_brb_test.csv\n"
+      "2019-01-30 20:18:39,599 - climada.hazard.tc_tracks - INFO - Reading /Users/aznarsig/Documents/Python/climada_python/climada/hazard/test/data/trac_brb_test.csv\n"
      ]
     },
     {
@@ -313,7 +313,7 @@
      "data": {
       "text/plain": [
        "(<Figure size 648x936 with 1 Axes>,\n",
-       " <cartopy.mpl.geoaxes.GeoAxesSubplot at 0x1a17a9eb38>)"
+       " <cartopy.mpl.geoaxes.GeoAxesSubplot at 0x111fb6d68>)"
       ]
      },
      "execution_count": 5,
@@ -395,16 +395,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-01-23 08:51:22,189 - climada.hazard.tc_tracks - INFO - Computing 9 synthetic tracks.\n",
-      "2019-01-23 08:51:25,364 - climada.hazard.tc_tracks - INFO - No historical track with landfall.\n",
-      "2019-01-23 08:51:25,370 - climada.hazard.tc_tracks - INFO - No decay coefficients.\n"
+      "2019-01-30 20:18:43,326 - climada.hazard.tc_tracks - INFO - Computing 9 synthetic tracks.\n",
+      "2019-01-30 20:18:47,344 - climada.hazard.tc_tracks - INFO - No historical track with landfall.\n",
+      "2019-01-30 20:18:47,348 - climada.hazard.tc_tracks - INFO - No decay coefficients.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "(<Figure size 648x936 with 1 Axes>,\n",
-       " <cartopy.mpl.geoaxes.GeoAxesSubplot at 0x1a25755e10>)"
+       " <cartopy.mpl.geoaxes.GeoAxesSubplot at 0x1a20682780>)"
       ]
      },
      "execution_count": 7,
@@ -443,7 +443,7 @@
    "source": [
     "The `TropCyclone` class is a derived class of `Hazard`. As such, it contains all the attributes and methods of a `Hazard`. Additionally, it contains the method `set_from_track()` to model tropical cyclones from tracks of events contrined in a `TCTracks` instance. \n",
     "\n",
-    "When setting a tropical cyclone from a track, the centroids can be provided. If no centroids are provided, the global centroids `GLB_NatID_grid_0360as_adv_2.mat` are used (as explained in [Centroids class](3_exp_centr_pd_crt.ipynb#Centroids-class)). The method used to calculate the wind gusts (the hazard intensity) can also be configured. The default (and only implemented up to now) is the method of Holland 2008."
+    "When setting a tropical cyclone from a track, the centroids can be provided. If no centroids are provided, the global centroids `GLB_NatID_grid_0360as_adv_2.mat` are used. The method used to calculate the wind gusts (the hazard intensity) can also be configured. The default is the method of Holland 2008."
    ]
   },
   {
@@ -738,10 +738,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-01-23 08:51:28,504 - climada.hazard.centroids.base - INFO - Reading file: /Users/aznarsig/Documents/Python/climada_python/data/system/GLB_NatID_grid_0360as_adv_2.mat\n",
-      "2019-01-23 08:51:30,321 - climada.hazard.trop_cyclone - INFO - Mapping 10 tracks to 1656093 centroids.\n",
-      "2019-01-23 08:52:04,615 - climada.hazard.trop_cyclone - DEBUG - Append events.\n",
-      "2019-01-23 08:52:06,864 - climada.hazard.trop_cyclone - DEBUG - Compute frequency.\n",
+      "2019-01-30 20:18:51,369 - climada.hazard.centroids.base - INFO - Reading file: /Users/aznarsig/Documents/Python/climada_python/data/system/GLB_NatID_grid_0360as_adv_2.mat\n",
+      "2019-01-30 20:18:53,965 - climada.hazard.trop_cyclone - INFO - Mapping 10 tracks to 1656093 centroids.\n",
+      "2019-01-30 20:20:00,474 - climada.hazard.trop_cyclone - DEBUG - Append events.\n",
+      "2019-01-30 20:20:04,926 - climada.hazard.trop_cyclone - DEBUG - Compute frequency.\n",
       "Date: ['1951-08-27']\n"
      ]
     },
@@ -803,10 +803,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-01-23 08:52:42,398 - climada.hazard.base - INFO - Reading file: /Users/aznarsig/Documents/Python/climada_python/data/demo/atl_prob.mat\n",
-      "2019-01-23 08:52:42,457 - climada.hazard.centroids.base - INFO - Reading file: /Users/aznarsig/Documents/Python/climada_python/data/demo/atl_prob.mat\n",
-      "2019-01-23 08:52:42,492 - climada.util.checker - DEBUG - Centroids.region_id not set. \n",
-      "2019-01-23 08:52:49,179 - climada.util.checker - DEBUG - Hazard.category not set. \n",
+      "2019-01-30 20:22:23,484 - climada.hazard.base - INFO - Reading file: /Users/aznarsig/Documents/Python/climada_python/data/demo/atl_prob.mat\n",
+      "2019-01-30 20:22:23,561 - climada.hazard.centroids.base - INFO - Reading file: /Users/aznarsig/Documents/Python/climada_python/data/demo/atl_prob.mat\n",
+      "2019-01-30 20:22:23,606 - climada.util.checker - DEBUG - Centroids.region_id not set. \n",
+      "2019-01-30 20:22:31,447 - climada.util.checker - DEBUG - Hazard.category not set. \n",
       "Number of historical events: 1445\n"
      ]
     }
