--- a/script/tutorial/climada_entity_Exposures.ipynb
+++ b/script/tutorial/climada_entity_Exposures.ipynb
@@ -45,7 +45,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-01-29 09:10:50,643 - climada - DEBUG - Loading default config file: /Users/aznarsig/Documents/Python/climada_python/climada/conf/defaults.conf\n"
+      "2019-01-30 20:06:22,313 - climada - DEBUG - Loading default config file: /Users/aznarsig/Documents/Python/climada_python/climada/conf/defaults.conf\n"
      ]
     },
     {
@@ -70,18 +70,18 @@
       "4      4      15.0  20.808081      1\n",
       "\n",
       "\u001b[1;03;30;30mexp_df is now an Exposures: <class 'climada.entity.exposures.base.Exposures'>\u001b[0m\n",
-      "2019-01-29 09:10:51,987 - climada.entity.exposures.base - INFO - Setting geometry attribute.\n",
+      "2019-01-30 20:06:24,532 - climada.entity.exposures.base - INFO - Setting geometry attribute.\n",
       "\n",
       "\u001b[1;03;30;30mcheck method logs:\u001b[0m\n",
-      "2019-01-29 09:10:52,093 - climada.entity.exposures.base - INFO - tag metadata set to default value:  File: \n",
+      "2019-01-30 20:06:24,659 - climada.entity.exposures.base - INFO - tag metadata set to default value:  File: \n",
       " Description: \n",
-      "2019-01-29 09:10:52,094 - climada.entity.exposures.base - INFO - ref_year metadata set to default value: 2018\n",
-      "2019-01-29 09:10:52,095 - climada.entity.exposures.base - INFO - value_unit metadata set to default value: USD\n",
-      "2019-01-29 09:10:52,096 - climada.entity.exposures.base - INFO - centr_ not set.\n",
-      "2019-01-29 09:10:52,097 - climada.entity.exposures.base - INFO - deductible not set.\n",
-      "2019-01-29 09:10:52,099 - climada.entity.exposures.base - INFO - cover not set.\n",
-      "2019-01-29 09:10:52,100 - climada.entity.exposures.base - INFO - category_id not set.\n",
-      "2019-01-29 09:10:52,102 - climada.entity.exposures.base - INFO - region_id not set.\n",
+      "2019-01-30 20:06:24,660 - climada.entity.exposures.base - INFO - ref_year metadata set to default value: 2018\n",
+      "2019-01-30 20:06:24,661 - climada.entity.exposures.base - INFO - value_unit metadata set to default value: USD\n",
+      "2019-01-30 20:06:24,661 - climada.entity.exposures.base - INFO - centr_ not set.\n",
+      "2019-01-30 20:06:24,662 - climada.entity.exposures.base - INFO - deductible not set.\n",
+      "2019-01-30 20:06:24,663 - climada.entity.exposures.base - INFO - cover not set.\n",
+      "2019-01-30 20:06:24,663 - climada.entity.exposures.base - INFO - category_id not set.\n",
+      "2019-01-30 20:06:24,664 - climada.entity.exposures.base - INFO - region_id not set.\n",
       "\n",
       "\u001b[1;03;30;30mexp_df looks like:\u001b[0m\n",
       "   value  latitude  longitude  if_TC                      geometry\n",
@@ -148,18 +148,18 @@
       "4       Palikir  POINT (158.1499743237623 6.916643696007725)\n",
       "\n",
       "\u001b[1;03;30;30mexp_gpd is now an Exposures: <class 'climada.entity.exposures.base.Exposures'>\u001b[0m\n",
-      "2019-01-29 09:10:52,188 - climada.entity.exposures.base - INFO - Setting latitude and longitude attributes.\n",
+      "2019-01-30 20:06:24,712 - climada.entity.exposures.base - INFO - Setting latitude and longitude attributes.\n",
       "\n",
       "\u001b[1;03;30;30mcheck method logs:\u001b[0m\n",
-      "2019-01-29 09:10:52,204 - climada.entity.exposures.base - INFO - tag metadata set to default value:  File: \n",
+      "2019-01-30 20:06:24,722 - climada.entity.exposures.base - INFO - tag metadata set to default value:  File: \n",
       " Description: \n",
-      "2019-01-29 09:10:52,205 - climada.entity.exposures.base - INFO - ref_year metadata set to default value: 2018\n",
-      "2019-01-29 09:10:52,207 - climada.entity.exposures.base - INFO - value_unit metadata set to default value: USD\n",
-      "2019-01-29 09:10:52,209 - climada.entity.exposures.base - INFO - centr_ not set.\n",
-      "2019-01-29 09:10:52,210 - climada.entity.exposures.base - INFO - deductible not set.\n",
-      "2019-01-29 09:10:52,211 - climada.entity.exposures.base - INFO - cover not set.\n",
-      "2019-01-29 09:10:52,213 - climada.entity.exposures.base - INFO - category_id not set.\n",
-      "2019-01-29 09:10:52,215 - climada.entity.exposures.base - INFO - region_id not set.\n",
+      "2019-01-30 20:06:24,723 - climada.entity.exposures.base - INFO - ref_year metadata set to default value: 2018\n",
+      "2019-01-30 20:06:24,723 - climada.entity.exposures.base - INFO - value_unit metadata set to default value: USD\n",
+      "2019-01-30 20:06:24,724 - climada.entity.exposures.base - INFO - centr_ not set.\n",
+      "2019-01-30 20:06:24,725 - climada.entity.exposures.base - INFO - deductible not set.\n",
+      "2019-01-30 20:06:24,726 - climada.entity.exposures.base - INFO - cover not set.\n",
+      "2019-01-30 20:06:24,727 - climada.entity.exposures.base - INFO - category_id not set.\n",
+      "2019-01-30 20:06:24,727 - climada.entity.exposures.base - INFO - region_id not set.\n",
       "\n",
       "\u001b[1;03;30;30mexp_gpd looks like:\u001b[0m\n",
       "           name                                     geometry  value  \\\n",
@@ -243,13 +243,13 @@
       "4            1      1         5      1         5  \n",
       "\n",
       "\u001b[1;03;30;30mexp_templ is now an Exposures: <class 'climada.entity.exposures.base.Exposures'>\u001b[0m\n",
-      "2019-01-29 09:10:52,303 - climada.entity.exposures.base - INFO - Setting geometry attribute.\n",
+      "2019-01-30 20:06:24,802 - climada.entity.exposures.base - INFO - Setting geometry attribute.\n",
       "\n",
       "\u001b[1;03;30;30mcheck method logs:\u001b[0m\n",
-      "2019-01-29 09:10:52,308 - climada.entity.exposures.base - INFO - tag metadata set to default value:  File: \n",
+      "2019-01-30 20:06:24,806 - climada.entity.exposures.base - INFO - tag metadata set to default value:  File: \n",
       " Description: \n",
-      "2019-01-29 09:10:52,309 - climada.entity.exposures.base - INFO - ref_year metadata set to default value: 2018\n",
-      "2019-01-29 09:10:52,310 - climada.entity.exposures.base - INFO - value_unit metadata set to default value: USD\n",
+      "2019-01-30 20:06:24,807 - climada.entity.exposures.base - INFO - ref_year metadata set to default value: 2018\n",
+      "2019-01-30 20:06:24,808 - climada.entity.exposures.base - INFO - value_unit metadata set to default value: USD\n",
       "\n",
       "\u001b[1;03;30;30mexp_templ looks like:\u001b[0m\n",
       "    latitude  longitude         value  deductible         cover  region_id  \\\n",
@@ -387,7 +387,7 @@
      "data": {
       "text/plain": [
        "(<Figure size 648x936 with 2 Axes>,\n",
-       " array([[<cartopy.mpl.geoaxes.GeoAxesSubplot object at 0x1151d9908>]],\n",
+       " array([[<cartopy.mpl.geoaxes.GeoAxesSubplot object at 0x1a1fe2acf8>]],\n",
        "       dtype=object))"
       ]
      },
@@ -430,7 +430,7 @@
      "data": {
       "text/plain": [
        "(<Figure size 648x936 with 2 Axes>,\n",
-       " array([[<cartopy.mpl.geoaxes.GeoAxesSubplot object at 0x1a24cc85f8>]],\n",
+       " array([[<cartopy.mpl.geoaxes.GeoAxesSubplot object at 0x1a208f4ac8>]],\n",
        "       dtype=object))"
       ]
      },
@@ -472,7 +472,7 @@
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x1a24cad898>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x1a208e30f0>]],\n",
        "      dtype=object)"
       ]
      },
@@ -1878,8 +1878,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-01-29 09:11:10,949 - climada.entity.exposures.base - INFO - Adding sea at 5 km resolution and 10 km distance from coast.\n",
-      "2019-01-29 09:11:13,287 - climada.entity.exposures.base - INFO - Setting geometry attribute.\n",
+      "2019-01-30 20:06:41,309 - climada.entity.exposures.base - INFO - Adding sea at 5 km resolution and 10 km distance from coast.\n",
+      "2019-01-30 20:06:43,139 - climada.entity.exposures.base - INFO - Setting geometry attribute.\n",
       "\u001b[1;03;30;30mPlotting exp_templ_sea.\u001b[0m\n"
      ]
     },
@@ -1887,7 +1887,7 @@
      "data": {
       "text/plain": [
        "(<Figure size 648x936 with 2 Axes>,\n",
-       " array([[<cartopy.mpl.geoaxes.GeoAxesSubplot object at 0x1a24da3cf8>]],\n",
+       " array([[<cartopy.mpl.geoaxes.GeoAxesSubplot object at 0x1a20597b00>]],\n",
        "       dtype=object))"
       ]
      },
@@ -2409,7 +2409,7 @@
    ],
    "source": [
     "# save to HDF5 format. metadata not saved!\n",
-    "DataFrame(exp_templ).to_hdf('exp_templ_hdf.hdf5', '/data', append=False)"
+    "DataFrame(exp_templ).to_hdf('results/exp_templ_hdf.hdf5', '/data', append=False)"
    ]
   },
   {
@@ -2421,7 +2421,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-01-29 09:11:16,945 - climada.util.save - INFO - Written file /Users/aznarsig/Documents/Python/climada_python/script/tutorial/results/exp_templ.pkl.p\n"
+      "2019-01-30 20:06:46,962 - climada.util.save - INFO - Written file /Users/aznarsig/Documents/Python/climada_python/script/tutorial/results/exp_templ.pkl.p\n"
      ]
     }
    ],
