minor corrections in LitPop Tutorial

--- a/script/tutorial/climada_entity_LitPop.ipynb
+++ b/script/tutorial/climada_entity_LitPop.ipynb
@@ -21,7 +21,7 @@
     "All other required data is acquired automatically.\n",
     "\n",
     "Available macroeconomic indicators can be selected via the variable fin_mode:\n",
-    "- 'pc': produced capital (Source: World Bank DataBank), incl. manufactured or built assets such as machinery, equipment, and physical structures (pc is in constant 2014 USD, dataavailable for the years 1995, 2000, 2005, 2010, 2014) \n",
+    "- 'pc': produced capital (Source: World Bank DataBank), incl. manufactured or built assets such as machinery, equipment, and physical structures (pc is in constant 2014 USD, data is available for the years 1995, 2000, 2005, 2010, 2014) \n",
     "- 'gdp': gross-domestic product (Source: World Bank)\n",
     "- 'income_group': gdp multiplied by country's income group+1\n",
     "- 'nfw': households' non-financial wealth (Source: Credit Suisse, of households only)\n",
@@ -121,7 +121,7 @@
     "### Plotting\n",
     "The exposure entity was initiated using the default setting, i.e. a resolution of 30 arcsec and produced capital 'pc' as total asset value, using the exponents $[1, 1]$.\n",
     "\n",
-    "If the init worked, we can now plot a map of Suriname's exposure:"
+    "If the init worked, we can now plot a map of Switzerland's exposure:"
    ]
   },
   {
@@ -182,7 +182,7 @@
     "Instead on produced capital, we can also downscale other available macroeconomic indicators as estimates of asset value.\n",
     "The indicator can be set via the variable fin_mode:\n",
     "\n",
-    "    'pc': produced capital (Source: World Bank DataBank), incl. manufactured or built assets such as machinery, equipment, and physical structures (pc is in constant 2014 USD, dataavailable for the years 1995, 2000, 2005, 2010, 2014)\n",
+    "    'pc': produced capital (Source: World Bank DataBank), incl. manufactured or built assets such as machinery, equipment, and physical structures (pc is in constant 2014-USD, data available for the years 1995, 2000, 2005, 2010, 2014)\n",
     "    'gdp': gross-domestic product (Source: World Bank)\n",
     "    'income_group': gdp multiplied by country's income group+1\n",
     "    'nfw': households' non-financial wealth (Source: Credit Suisse, of households only)\n",
@@ -269,7 +269,7 @@
     "\n",
     "$30 arcsec \\approx 1 km$.\n",
     "\n",
-    "$3600 arcsec = 1° \\approx 110 km$.\n",
+    "$3600 arcsec = 1\\degree \\approx 110 km$.\n",
     "\n",
     "Additionally, we can change the year our exposure is supposed to represent. For this, nightlight and population data  are used that are closest to the requested years. Macroeconomic indicators like produced capital are interpolated from available data or scaled proportional to GDP.\n",
     "\n",
@@ -341,7 +341,7 @@
     "\n",
     "LitPop per pixel is the product of the exponents of nightlights+1 (Lit) and Population count (Pop).\n",
     "\n",
-    "$Lit^mPop^n = Lit^m * Pop^n$, with $exponents = [m, n] \\in \\N^+$ (Default values are $m=n=1$).\n",
+    "$Lit^mPop^n = Lit^m * Pop^n$, with $exponents = [m, n] \\in \\N_0$ (Default values are $m=n=1$).\n",
     "\n",
     "We can also change m and n.\n",
     "\n",
