minor correction in connotation in LitPop Tutorial

--- a/script/tutorial/climada_entity_LitPop.ipynb
+++ b/script/tutorial/climada_entity_LitPop.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "This class is a data model of economic exposure. It models countries' gridded exposure by interpolating an macroeconomic indicator through the product of night light intensities and gridded population count for a specific year. Asset value is distributed to the grid proportzional to LitPop. LitPop at each pixel is calculated in the script as:\n",
     "\n",
-    "$Lit^mPop^n = Lit^m * Pop^n$, with $exponents = [m, n] \\in \\N^+$ (Default values are $m=n=1$).\n",
+    "$Lit^mPop^n = Lit^m * Pop^n$, with $exponents = [m, n] \\in \\N_0$ (Default values are $m=n=1$).\n",
     "\n",
     "The night light images used are the following:\n",
     "- year 2012 and 2016: https://earthobservatory.nasa.gov/Features/NightLights (15 arcsec resolution (~500m))\n",
